--- a/index.html
+++ b/index.html
@@ -29,21 +29,21 @@
         <h1>Some of my Projects</h1>
         <div class="rows">
             <div class="row">
-                <a href="">
+                <a href="https://sirahmeddbel.itch.io/simple-parkour">
                 <img src="./assets/img/Artboard 1_1.png" alt="">
                 <h2>Simple Parkour</h2>
                 <p>"Simple Parkour" is a game that starts as a typical parkour experience but gradually transforms into a horror game. Players initially navigate through challenging parkour courses, but as they progress, eerie elements and unexpected scares begin to emerge, turning the gameplay into a suspenseful horror adventure. The game's unique blend of genres keeps players on their toes, offering a surprising and thrilling experience.</p>
                 </a>
             </div>
             <div class="row">
-                <a href="">
+                <a href="./Tsma">
                 <img src="./assets/img/icon.jpg" alt="">
                 <h2>Tsma</h2>
                 <p>TSMA is a social media platform that combines features from Facebook, Instagram, and Twitter, creating a versatile space for users to connect, share, and engage. It allows users to post updates, photos, and videos, follow others, and interact through likes, comments, and shares. The platform includes rich multimedia sharing like Instagram, a real-time news feed similar to Twitter, and comprehensive user profiles and groups like Facebook. TSMA also supports direct messaging, trending topics, and customizable privacy settings, aiming to provide a holistic social networking experience that caters to a wide range of user interests and interactions.</p>
                 </a>
             </div>
             <div class="row">
-                <a href="">
+                <a href="./hao">
                 <img src="./assets/img//hao-icon.png" alt="">
                 <h2>hao</h2>
                 <p>Hao is a video-sharing platform similar to YouTube, offering features such as video uploads, user profiles, advanced search, interactive comments, and live streaming. It supports monetization for content creators through ads, memberships, and donations. Users can create playlists, subscribe to channels, and engage with content through likes and shares. The platform emphasizes a user-friendly interface, accessibility, community engagement, and robust privacy and security measures, providing a seamless and enjoyable experience for both creators and viewers.</p>
